--- a/_posts/2022-05-16-Unnamed.md
+++ b/_posts/2022-05-16-Unnamed.md
@@ -11,3 +11,20 @@ visibility: true
 hidden-from-recents: true
 featured: false
 ---
+
+### Key Responsibilities
+- Created a notification manager to inform the user of switch activations and actions that happen off screen
+- Created various puzzle mechanics, such as pressure pads, keys, spike pits and levers
+
+### Project Overview
+This was a short 6 week project for my first year of study. Since I already had a familiarity with the engine at the start of this project, I dedicated my time into making it look nice as well as prototyping mechanics for future levels. Unfortunately, due to time constraints these future levels were never finished.
+
+The game features a notification system, complete with simple animation, to notify players of consequences to in game events. The demo level features a few simple mechanics: a spike pit representing the fail condition, 2 types of dynamic event causers in the form of pressure pads and switches as well as a key, and the ending portal where the players score and time is displayed.
+
+<img class="inline-center" src="/assets/img/posts/unnamed/notification.png" alt-text="In-game screenshot showing a lever"/>
+<p style="font-size: 13px; text-align: center;"><i>The notification system. Here, pulling the lever triggers a notification to inform the player something happened offscreen</i></p>
+
+Pressure pads can be bound to any other object, and can cause an event to fire on them, and in this instance, are used to raise the portcullis at the end of the level, as well as to extend a drawbridge over the spikepit, in order to access higher levels.
+
+<img class="inline-center" src="/assets/img/posts/unnamed/level-exit.png" alt-text="In-game screenshot showing the level exit"/>
+<p style="font-size: 13px; text-align: center;"><i>The level exit is accessible now that the lever has been pulled </i></p>
