+ Fixed latest projects button

--- a/_posts/2025-05-16-A.L.E.R.T.md
+++ b/_posts/2025-05-16-A.L.E.R.T.md
@@ -56,7 +56,7 @@ This project was a long and laborious project, that was full of unexpected momen
 
 ### Project Development Cycle
 This project moved very quickly, due to only having 12 weeks. This meant prioritising engine features was a must. Going into the project
-the engine wasn't very fleshed out at all, only being capable of loading data driven models and textures, as well as being able to spawn objects and move them around. Other basic features such as using ImGuizmo and scene management were included as well for designer utility. ImGuizmo was a particular challenge to integrate, due to the usage of needing to manually upgrade a special WIP version of ImGui.
+the engine wasn't very fleshed out at all, only being capable of loading data driven models and textures, as well as being able to spawn objects and move them around. Other basic features such as using ImGuizmo and scene management were included as well for designer utility. ImGuizmo was a particular challenge to integrate, due to needing to manually upgrade a special WIP version of ImGui.
 
 <img class="inline-center" src="{{site.url}}{{site.baseurl}}/assets/img/posts/alert/engine-beginnings.png" alt-text="The engine's starting phase"/>
 <p style="font-size: 13px; text-align: center;"><i>The humble beginnings of the engine, it had the ability to load and place models through the scene</i></p>
