--- a/_posts/2025-05-16-A.L.E.R.T.md
+++ b/_posts/2025-05-16-A.L.E.R.T.md
@@ -6,7 +6,7 @@ date: '2025-05-16 00:00:00 +0000'
 role: Engine Developer
 team: ['Ryan Harland', 'Mathew France', 'Bradley Green', 'Claire Langton-Goh', 'Josh Wade', 'Austin Kurnia']
 technologies: ['C++', 'Bespoke Engine', 'PlayStation 5', 'C#', 'ImGui', 'WPF', 'RapidJSON', 'tinyOBJ', 'fmt']
-thumbnail: assets/img/posts/A.L.E.R.T.png
+thumbnail: assets/img/posts/A.L.E.R.T.webp
 permalink: /projects/A.L.E.R.T/
 visibility: true
 hidden-from-recents: false
