--- a/_posts/2025-05-16-A.L.E.R.T.md
+++ b/_posts/2025-05-16-A.L.E.R.T.md
@@ -16,16 +16,11 @@ released: true
 
 ### Project Showreel
 
+<link rel="stylesheet" href="node_modules/lite-youtube-embed/src/lite-yt-embed.css" />
+<script src="node_modules/lite-youtube-embed/src/lite-yt-embed.js"></script>
+
 <div style="position: relative; width: 100%; padding-top: 56.25%; margin-bottom: 10px;">
-  <iframe
-    src="https://www.youtube.com/embed/F7niBfhu1QI"
-    title="A.L.E.R.T Showreel"
-    frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-    referrerpolicy="strict-origin-when-cross-origin"
-    allowfullscreen
-    style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
-  ></iframe>
+  <lite-youtube videoid="F7niBfhu1QI" playlabel="A.L.E.R.T Showreel"></lite-youtube>
 </div>
 
 ### Key Responsibilities
