~ Fixed path error

--- a/_posts/2025-05-16-A.L.E.R.T.md
+++ b/_posts/2025-05-16-A.L.E.R.T.md
@@ -16,8 +16,8 @@ released: true
 
 ### Project Showreel
 
-<link rel="stylesheet" href="node_modules/lite-youtube-embed/src/lite-yt-embed.css" />
-<script src="node_modules/lite-youtube-embed/src/lite-yt-embed.js"></script>
+<link rel="stylesheet" href="{{site.url}}{{site.baseurl}}/assets/css/lite-yt-embed.css" />
+<script src="{{site.url}}{{site.baseurl}}/assets/js/lite-yt-embed.js"></script>
 
 <div style="position: relative; width: 100%; padding-top: 56.25%; margin-bottom: 10px;">
   <lite-youtube videoid="F7niBfhu1QI" playlabel="A.L.E.R.T Showreel"></lite-youtube>
