+ Potential positioning fix

--- a/_posts/2025-05-16-A.L.E.R.T.md
+++ b/_posts/2025-05-16-A.L.E.R.T.md
@@ -20,7 +20,7 @@ released: true
 <script src="{{site.url}}{{site.baseurl}}/assets/js/lite-yt-embed.js"></script>
 
 <div style="position: relative; width: 100%; padding-top: 56.25%; margin-bottom: 10px;">
-  <lite-youtube videoid="F7niBfhu1QI" playlabel="A.L.E.R.T Showreel"></lite-youtube>
+  <lite-youtube videoid="F7niBfhu1QI" playlabel="A.L.E.R.T Showreel" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></lite-youtube>
 </div>
 
 ### Key Responsibilities
